--- a/11filter-filter.html
+++ b/11filter-filter.html
@@ -63,6 +63,7 @@
             
         </div>
         <!-- <h2>{{error}}</h2> -->
+        <h2>this is my assignment for today</h2>
     </div>
     <script>
         var appl = angular.module('app', []);
